# meltree

./: README.md  pyproject.toml
examples/: app_calc.py  app_component_comm.py  logs-MelTree.txt
examples/components/: long_running_process.py
examples/templates/: index.html
examples/templates/meltree/: calculator.html  eel.js
meltree/: __init__.py  component.py  meltree.py  message.py  tag.py
meltree/static/meltree_static/: attribute.js  component.js  element.js  meld.js  morph.js  utils.js
tests/: conftest.py  test_http.py
tests/common/: handlers.py
tests/common/components/: __init__.py  calculator.py  progress_bar.py
tests/templates/: index_html_ok_static.html
tests/templates/meltree/: calculator.html  long_running_process.html  progress_bar.html
